--- a/static/i18n/zh.json
+++ b/static/i18n/zh.json
@@ -32,9 +32,9 @@
   "rank": "排行",
   "repo": "仓库",
   "text-level-1": "妈了个巴子",
-  "text-level-2": "TCL",
-  "text-level-3": "TQL",
-  "text-level-4": "您",
+  "text-level-2": "操蛋",
+  "text-level-3": "铲铲",
+  "text-level-4": "听课",
   "text-level-5": "人?",
   "time-over": "倒计时多了",
   "rank-title": "吃掉小鹿乃-排行榜",
